--- a/NaproKarta.Client/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/NaproKarta.Client/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model NaproKarta.Client.ViewModels.ExternalLoginConfirmationViewModel
+﻿@model NaproKarta.Client.Models.ViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
