--- a/NaproKarta.Client/Views/Account/ForgotPassword.cshtml
+++ b/NaproKarta.Client/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model NaproKarta.Client.ViewModels.ForgotPasswordViewModel
+﻿@model NaproKarta.Client.Models.ViewModels.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
