--- a/NaproKarta.Client/Views/Account/Login.cshtml
+++ b/NaproKarta.Client/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
-﻿@using NaproKarta.Client.ViewModels
-@model NaproKarta.Client.ViewModels.LoginViewModel
+﻿@using NaproKarta.Client.Models.ViewModels
+@model NaproKarta.Client.Models.ViewModels.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
