--- a/NaproKarta.Client/Views/Account/Register.cshtml
+++ b/NaproKarta.Client/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model NaproKarta.Client.ViewModels.RegisterViewModel
+﻿@model NaproKarta.Client.Models.ViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
