--- a/NaproKarta.Client/Views/Account/SendCode.cshtml
+++ b/NaproKarta.Client/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model NaproKarta.Client.ViewModels.SendCodeViewModel
+﻿@model NaproKarta.Client.Models.ViewModels.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
