--- a/NaproKarta.Client/Views/Account/VerifyCode.cshtml
+++ b/NaproKarta.Client/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model NaproKarta.Client.ViewModels.VerifyCodeViewModel
+﻿@model NaproKarta.Client.Models.ViewModels.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
