--- a/NaproKarta.Client/Views/Manage/AddPhoneNumber.cshtml
+++ b/NaproKarta.Client/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model NaproKarta.Client.ViewModels.AddPhoneNumberViewModel
+﻿@model NaproKarta.Client.Models.ViewModels.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
