--- a/NaproKarta.Client/Views/Manage/ChangePassword.cshtml
+++ b/NaproKarta.Client/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model NaproKarta.Client.ViewModels.ChangePasswordViewModel
+﻿@model NaproKarta.Client.Models.ViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
