--- a/NaproKarta.Client/Views/Manage/Index.cshtml
+++ b/NaproKarta.Client/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model NaproKarta.Client.ViewModels.IndexViewModel
+﻿@model NaproKarta.Client.Models.ViewModels.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
