--- a/NaproKarta.Client/Views/Manage/ManageLogins.cshtml
+++ b/NaproKarta.Client/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model NaproKarta.Client.ViewModels.ManageLoginsViewModel
+﻿@model NaproKarta.Client.Models.ViewModels.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
