--- a/NaproKarta.Client/Views/Manage/SetPassword.cshtml
+++ b/NaproKarta.Client/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model NaproKarta.Client.ViewModels.SetPasswordViewModel
+﻿@model NaproKarta.Client.Models.ViewModels.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
