--- a/NaproKarta.Client/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/NaproKarta.Client/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model NaproKarta.Client.ViewModels.VerifyPhoneNumberViewModel
+﻿@model NaproKarta.Client.Models.ViewModels.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
