--- a/NaproKarta.Client/Views/Account/ResetPassword.cshtml
+++ b/NaproKarta.Client/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model NaproKarta.Client.ViewModels.ResetPasswordViewModel
+﻿@model NaproKarta.Client.Models.ViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
