--- a/NaproKarta.Client/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/NaproKarta.Client/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model NaproKarta.Client.ViewModels.ExternalLoginListViewModel
+﻿@model NaproKarta.Client.Models.ViewModels.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
